samples/_failures_safe/1761353350_602e08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c55ae7c.c: In function ‘generate_summary’:
./samples/SAFE/__tmp_8c55ae7c.c:133:30: error: expected ‘;’ at end of input
  133 |         for (int i = start; i
      |                              ^
      |                              ;
./samples/SAFE/__tmp_8c55ae7c.c:133:9: error: expected declaration or statement at end of input
  133 |         for (int i = start; i
      |         ^~~
./samples/SAFE/__tmp_8c55ae7c.c:133:9: error: expected declaration or statement at end of input
